--- a/project.css
+++ b/project.css
@@ -517,6 +517,7 @@
         width: 100%;
         color: white;
         flex-direction: column;
+
         
     }
 
@@ -526,7 +527,7 @@
         justify-content:center;
         align-items: center;
         align-content: center;
-        letter-spacing: 5px;
+        letter-spacing: 1px;
         margin-bottom: 5px;
         
         
@@ -573,7 +574,7 @@
     .heading2 {
         background-color:white;
         width: 50%;
-        height: 60%;
+        height: 75%;
         margin-top: 5%;
         text-align: justify;
         padding: 3% 10% 1% 3%;
@@ -631,7 +632,7 @@
         justify-content: center;
         width: 100%;
         height: 250px;
-        margin-top: 450px
+        margin-top: 450px;
     
         /* margin: 100px 20px 10px 50px; */
         
@@ -673,9 +674,10 @@
     .team>span{
         color: red;
         padding-top: 20px;
+        font-size: 10px;
     }
     .main4 img {
-        width: 50%;
+        width: 60%;
         height: 65%;
         border-radius: 50%;
     
@@ -1078,7 +1080,7 @@
     
     .about1 {
         position: absolute;
-        top: 32%;
+        top: 28%;
         left: 30%;
     }
     
@@ -1098,7 +1100,7 @@
     height: 100px;
     bottom: 30%;
     margin-top: 20%;
-    left: 8%;
+    right: 30%;
 }
 .heading3, .snapshot>span{
 
